文件操作优化，下载功能优化，下载可视化，完善操作

--- a/app/src/main/res/layout/activity_add_new_movie.xml
+++ b/app/src/main/res/layout/activity_add_new_movie.xml
@@ -67,4 +67,15 @@
               android:layout_marginTop="200dp"
               android:layout_margin="15dp"
               android:textColor="#fff"/>
+
+
+    <TextView android:layout_width="match_parent" android:layout_height="50dp"
+              android:id="@+id/download_btn"
+              android:textSize="18sp"
+              android:background="@color/colorPrimaryDark"
+              android:text="下载"
+              android:gravity="center"
+              android:layout_marginTop="200dp"
+              android:layout_margin="15dp"
+              android:textColor="#fff"/>
 </LinearLayout>
